completed navbar UI

--- a/index.html
+++ b/index.html
@@ -56,6 +56,16 @@
             </ul>
         </div>
     </section>
+    <nav class="navbar">
+        <ul>
+            <li><a href="#"><i class='bx bxs-home'></i></a> </li>
+            <li><a href="#">About Us</a> </li>
+            <li><a href="#">Contact Us</a> </li>
+            <li><a href="#">Services</a> </li>
+            <li><a href="#">Privacy Policy</a> </li>
+            <li><a href="#">Terms & Conditions</a> </li>
+        </ul>
+    </nav>
     <!-- navbar ends -->
     <section></section>
     <footer></footer>
