--- a/index.html
+++ b/index.html
@@ -1,76 +1,188 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
-    <link rel="stylesheet" href="./styles/style.css">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-</head>
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+  </head>
 
-<body>
+  <body>
     <!-- navbar starts -->
     <header>
+      <!-- top section starts -->
 
-        <!-- top section starts -->
+      <div class="top-header-area">
+        <ul>
+          <li>
+            <a href="#">
+              <i class="bx bx-lock"></i>
+              <span>Admin Login</span>
+            </a>
+          </li>
+          <li>
+            <a href="tel:101">
+              <i class="bx bx-phone-call"></i>
+              <span>Helpline:101</span>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="top-header-socail">
+        <ul>
+          <li>
+            <a href="#"><i class="bx bxl-facebook"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="bx bxl-twitter"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="bx bxl-instagram"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="bx bxl-linkedin"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="bx bxl-github"></i></a>
+          </li>
+        </ul>
+      </div>
 
-        <div class="top-header-area">
-            <ul>
-                <li>
-                    <a href="#">
-                        <i class="bx bx-lock"></i>
-                        <span>Admin Login</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="tel:101">
-                        <i class="bx bx-phone-call"></i>
-                        <span>Helpline:101</span>
-                    </a>
-                </li>
-            </ul>
-        </div>
-        <div class="top-header-socail">
-            <ul>
-                <li><a href="#"><i class="bx bxl-facebook"></i></a></li>
-                <li><a href="#"><i class="bx bxl-twitter"></i></a></li>
-                <li><a href="#"><i class="bx bxl-instagram"></i></a></li>
-                <li><a href="#"><i class="bx bxl-linkedin"></i></a></li>
-                <li><a href="#"><i class="bx bxl-github"></i></a></li>
-            </ul>
-        </div>
-
-        <!-- top section ends -->
+      <!-- top section ends -->
     </header>
     <section class="logo-section">
-
-        <div class="logo">
-            <img src="./images/logo.png" alt="logo">
-            <h1>Hospital Management System</h1>
-        </div>
-        <div class="links">
-            <ul>
-                <li style="background-color: #979b16;"><a href="#">User Login</a></li>
-                <li style="background-color: #4fc0e8;"><a href="#">Hospital Login</a></li>
-            </ul>
-        </div>
+      <div class="logo">
+        <img src="./images/logo.png" alt="logo" />
+        <h1>Hospital Management System</h1>
+      </div>
+      <div class="links">
+        <ul>
+          <li style="background-color: #979b16"><a href="#">User Login</a></li>
+          <li style="background-color: #4fc0e8">
+            <a href="#">Hospital Login</a>
+          </li>
+        </ul>
+      </div>
     </section>
     <nav class="navbar">
-        <ul>
-            <li><a href="#"><i class='bx bxs-home'></i></a> </li>
-            <li><a href="#">About Us</a> </li>
-            <li><a href="#">Contact Us</a> </li>
-            <li><a href="#">Services</a> </li>
-            <li><a href="#">Privacy Policy</a> </li>
-            <li><a href="#">Terms & Conditions</a> </li>
-        </ul>
+      <ul>
+        <li>
+          <a href="#"><i class="bx bxs-home"></i></a>
+        </li>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Contact Us</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">Privacy Policy</a></li>
+        <li><a href="#">Terms & Conditions</a></li>
+      </ul>
     </nav>
     <!-- navbar ends -->
-    <section></section>
-    <footer></footer>
+    <section id="main">
+      <div class="poster">
+        <img src="./images/anime-bg.jpg" alt="poster" />
+      </div>
+      <div class="anime">
+        <a href="#">
+          <div class="box">
+            <img
+              src="./images/department.png"
+              alt=""
+              style="height: 60%; width: 80%; filter: invert(100%)"
+            />
+            <h3>Departments</h3>
+          </div>
+        </a>
+
+        <a href="#">
+          <div class="box">
+            <img
+              src="./images/hospital.png"
+              alt=""
+              style="height: 60%; width: 80%"
+            />
+            <h3>Find Hospital</h3>
+          </div>
+        </a>
+        <a href="#">
+          <div class="box">
+            <img src="./images/bed.png" alt="" />
+            <h3>Book a Bed</h3>
+          </div>
+        </a>
+        <a href="#">
+          <div class="box">
+            <img src="./images/appointment.png" alt="" />
+            <h3>View Appointment</h3>
+          </div>
+        </a>
+
+        <a href="#">
+          <div class="box">
+            <img
+              src="./images/app.webp"
+              alt=""
+              style="height: 50%; width: 40%"
+            />
+            <h3>Android App</h3>
+          </div>
+
+          <a href="#">
+            <div class="box">
+              <img
+                src="./images/faq.png"
+                alt=""
+                style="height: 50%; width: 70%"
+              />
+              <h3>Help</h3>
+            </div>
+          </a>
+        </a>
+      </div>
+      <div class="admin-desk">
+        <div class="img">
+          <img src="./images/logo.png" alt="" />
+        </div>
+        <div class="content">
+          <h3>From HMS's Desk</h3>
+          <p>
+            The Hospital Management System (HMS) is a comprehensive solution
+            designed to enhance the efficiency and effectiveness of healthcare
+            facilities. This project addresses the challenges faced by hospitals
+            in managing diverse tasks, from patient information to resource
+            allocation.
+          </p>
+          <p>
+            The primary objectives of the HMS project include streamlining
+            administrative processes, improving patient care, and facilitating
+            seamless communication among healthcare professionals.
+          </p>
+          <p>
+            With a user-friendly interface, the HMS aims to simplify complex
+            workflows, reduce paperwork, and minimize errors in medical data.
+            The integration of a centralized database ensures real-time access
+            to patient information, enabling quick decision-making and enhanced
+            coordination among hospital staff.
+          </p>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <div class="footer">
+        <div class="quick">
+          <ul>
+            <li><a href="#"></a></li>
+            <li><a href="#"></a></li>
+            <li><a href="#"></a></li>
+            <li><a href="#"></a></li>
+            <li><a href="#"></a></li>
+          </ul>
+        </div>
+      </div>
+    </footer>
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
-
-</body>
-
+  </body>
 </html>
